# gwshell

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts  新建 文本文档.txt
.playwright-mcp/: page-2026-06-07T08-15-57-132Z.yml
docs/: CC_SWITCH_DEEP_INTEGRATION.md  CC_SWITCH_INTEGRATION.md  README_DE.md  README_ES.md  README_FR.md  README_JA.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_config.rs  crypto.rs  database.rs  docker.rs  history.rs  lib.rs  main.rs  mcp_config.rs  metrics.rs  prompt_config.rs  pty.rs  serial.rs  session.rs  ssh.rs  ssh_config.rs  usage_tracker.rs  vault.rs
src-tauri/src/agent/: alerts.rs  audit.rs  log_filter.rs  manager.rs  mock.rs  mod.rs  policy.rs  prompt.rs  provider.rs  redaction.rs  risk.rs  stream.rs  tools.rs  types.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/ai_platform/: mod.rs
src-tauri/src/ai_platform/application/: mod.rs
src-tauri/src/ai_platform/application/agents/: service.rs
src-tauri/src/ai_platform/application/auth/: service.rs
src-tauri/src/ai_platform/application/mcp/: service.rs
src-tauri/src/ai_platform/application/openclaw/: service.rs
src-tauri/src/ai_platform/application/prompts/: service.rs
src-tauri/src/ai_platform/application/providers/: service.rs
src-tauri/src/ai_platform/application/proxy/: service.rs
src-tauri/src/ai_platform/application/sessions/: service.rs
src-tauri/src/ai_platform/application/settings/: service.rs
src-tauri/src/ai_platform/application/skills/: service.rs
src-tauri/src/ai_platform/application/sync/: mod.rs
src-tauri/src/ai_platform/application/usage/: service.rs
src-tauri/src/ai_platform/application/workspace/: service.rs
src-tauri/src/ai_platform/domain/: agent.rs  auth.rs  errors.rs  failover.rs  mcp.rs  mod.rs  model.rs  openclaw.rs  prompt.rs  provider.rs  proxy.rs  sessions.rs  settings.rs  skill.rs  usage.rs  workspace.rs
src-tauri/src/ai_platform/infrastructure/: mod.rs
src-tauri/src/ai_platform/infrastructure/auth/: mod.rs
src-tauri/src/ai_platform/infrastructure/config_bridge/: mcp_sync.rs  mod.rs
src-tauri/src/ai_platform/infrastructure/db/: mcp_db.rs  mod.rs  providers_db.rs
src-tauri/src/ai_platform/infrastructure/deeplink/: mod.rs
src-tauri/src/ai_platform/infrastructure/fs/: agents_store.rs  mod.rs  providers_store.rs  proxy_store.rs  settings_store.rs  skills_store.rs  usage_store.rs
src-tauri/src/ai_platform/infrastructure/proxy/: mod.rs  usage_parser.rs
src-tauri/src/ai_platform/infrastructure/webdav/: mod.rs
src-tauri/src/ai_platform/interfaces/: mod.rs
src-tauri/src/ai_platform/interfaces/commands/: agents.rs  auth.rs  health.rs  mcp.rs  openclaw.rs  prompts.rs  providers.rs  proxy.rs  sessions.rs  settings.rs  skills.rs  usage.rs  workspace.rs
src-tauri/src/ai_platform/interfaces/dto/: agents.rs  auth.rs  health.rs  mcp.rs  mod.rs  openclaw.rs  prompts.rs  providers.rs  proxy.rs  sessions.rs  settings.rs  skills.rs  usage.rs  workspace.rs
src-tauri/src/ai_platform/interfaces/events/: mod.rs
src-tauri/src/ai_platform/runtime/: background_jobs.rs  bootstrap.rs  state.rs
src-tauri/src/ssh/: auth.rs  connect.rs  exec.rs  forward.rs  handler.rs  known_hosts.rs  mod.rs  params.rs  probe.rs  session.rs  sftp.rs  transport.rs
src-tauri/src/testdata/: proc_sample1.txt  proc_sample2.txt
(+381 files in other folders)
