[package]
name = "gwshell"
version = "0.1.0"
description = "GWShell - A modern SSH/Shell terminal"
authors = ["you"]
edition = "2021"

[lib]
name = "gwshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ssh2 = "0.9"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
dirs = "6"
parking_lot = "0.12"
serialport = "4"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
encoding_rs = "0.8"
socks = "0.3"
base64 = "0.22"
rusqlite = { version = "0.33", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "stream"] }
toml = { version = "0.8", features = ["parse"] }
axum = "0.7"
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
